[package]
name = "torrent-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
itertools = "0.12.1"
prost = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12.3"

