[project]
name = "client-ui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "royshulman", email = "roy.shulman@gmail.com" }
]
dependencies = [
    "streamlit>=1.31.0",
    "watchdog>=4.0.0",
    "pandas>=2.0.3",
    "rich>=13.7.0",
]
requires-python = ">= 3.8"

[project.scripts]
hello = "client_ui:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/client_ui"]
